--- a/index.html
+++ b/index.html
@@ -1208,13 +1208,13 @@
 
                             <div class="flex items-center justify-between">
                                 <div class="flex items-center gap-2">
-                                    <img src="https://randomuser.me/api/portraits/men/22.jpg"
+                                    <img src="https://randomuser.me/api/portraits/women/65.jpg"
                                         alt="Coordinador Deportivo"
                                         class="w-8 h-8 rounded-full border-2 border-white dark:border-gray-700 shadow-sm" />
                                     <div>
-                                        <p class="text-sm font-medium text-gray-900 dark:text-gray-100">Prof. Sánchez
+                                        <p class="text-sm font-medium text-gray-900 dark:text-gray-100">Prof.  Jessica Zumba
                                         </p>
-                                        <p class="text-xs text-gray-500 dark:text-gray-400">Coordinador Deportivo</p>
+                                        <p class="text-xs text-gray-500 dark:text-gray-400">Coordinadora Deportiva</p>
                                     </div>
                                 </div>
                                 <!-- <button onclick="openModal('juegosinternos')"
@@ -1256,13 +1256,13 @@
 
                             <div class="flex items-center justify-between">
                                 <div class="flex items-center gap-2">
-                                    <img src="https://randomuser.me/api/portraits/women/65.jpg"
+                                    <img src="https://randomuser.me/api/portraits/men/22.jpg"
                                         alt="Coordinadora Cívica"
                                         class="w-8 h-8 rounded-full border-2 border-white dark:border-gray-700 shadow-sm" />
                                     <div>
-                                        <p class="text-sm font-medium text-gray-900 dark:text-gray-100">Prof. Ramírez
+                                        <p class="text-sm font-medium text-gray-900 dark:text-gray-100">Prof. Cristian Román
                                         </p>
-                                        <p class="text-xs text-gray-500 dark:text-gray-400">Coordinadora Cívica</p>
+                                        <p class="text-xs text-gray-500 dark:text-gray-400">Comité Central</p>
                                     </div>
                                 </div>
                                 <!-- <button onclick="openModal('juramentoBandera')"
@@ -1802,9 +1802,7 @@
                 <!-- Footer Bottom -->
                 <div class="border-t border-gray-200 dark:border-gray-700 pt-8">
                     <p class="text-center text-xs text-gray-500 dark:text-gray-400">
-                        &copy; 2024 Unidad Educativa 7 de Noviembre - Todos los derechos reservados<br>Web desarrollada
-                        en su totalidad por <a href="https://github.com/AlexisJr2004" class="text-blue-500">Alex
-                            Duran</a>
+                        &copy; 2024 Unidad Educativa 7 de Noviembre - Todos los derechos reservados
                     </p>
                 </div>
             </div>
