--- a/inscripciones.html
+++ b/inscripciones.html
@@ -926,9 +926,7 @@
                 <!-- Footer Bottom -->
                 <div class="border-t border-gray-200 dark:border-gray-700 pt-8">
                     <p class="text-center text-xs text-gray-500 dark:text-gray-400">
-                        &copy; 2024 Unidad Educativa 7 de Noviembre - Todos los derechos reservados<br>Web desarrollada
-                        en su totalidad por <a href="https://github.com/AlexisJr2004" class="text-blue-500">Alex
-                            Duran</a>
+                        &copy; 2024 Unidad Educativa 7 de Noviembre - Todos los derechos reservados
                     </p>
                 </div>
             </div>
